# oxidgb

./: .gitignore  Cargo.toml  Jenkinsfile  LICENSE  Makefile  README.md  aarch64-unknown-switch.json  oxidgb.nro  oxidgb.nso
.github/workflows/: rust-build.yml
core/: Cargo.toml
core/src/: input.rs  io.rs  lib.rs  mem.rs  rom.rs  sound.rs
core/src/cpu/: interrupts.rs  mod.rs  regs.rs
core/src/cpu/instrs/: bit.rs  bitrotation.rs  bitshift.rs  bitswap.rs  bitwise.rs  comparsions.rs  general.rs  increments.rs  jumps.rs  loads.rs  loads16.rs  mod.rs  special.rs  utils.rs
core/src/gpu/: mod.rs
glutin_frontend/: Cargo.toml
glutin_frontend/src/: debugger.rs  main.rs
libretro_frontend/: Cargo.toml
libretro_frontend/libretro-backend/: Cargo.toml
libretro_frontend/libretro-backend/libretro-sys/src/: lib.rs
libretro_frontend/libretro-backend/src/: lib.rs
libretro_frontend/src/: lib.rs  logging.rs
sdl_frontend/: Cargo.toml
sdl_frontend/src/: debugger.rs  main.rs
src/: debugger.rs  io.rs  lib.rs  logging.rs  main.rs  mem.rs  rom.rs
src/core/: io.rs  mem.rs  mod.rs  rom.rs
src/core/cpu/: interrupts.rs  mod.rs  regs.rs
src/core/cpu/instrs/: bit.rs  bitrotation.rs  bitshift.rs  bitswap.rs  bitwise.rs  comparsions.rs  general.rs  increments.rs  jumps.rs  loads.rs  loads16.rs  mod.rs  special.rs  utils.rs
src/core/gpu/: mod.rs
src/cpu/: interrupts.rs  mod.rs  regs.rs
src/cpu/instrs/: bitwise.rs  general.rs  utils.rs
src/gpu/: mod.rs
