[package]
name = "oxidgb_glutin"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
glutin = "0.11.0"
gl = "0.7.0"
libc = "*"

nfd = "0.0.4"

# Argument parser
clap = "~2.19.0"

# For the CLI debugger
rustyline = "1.0.0"

# Logging implementation
fern = "0.4.0"
chrono = "0.4.0"
log = "0.3.8"

[dependencies.oxidgb_core]
path = "../core"
