[package]
name = "oxidgb_glutin"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
glutin = "0.26.0"
gl = "0.14.0"
libc = "*"

native-dialog = "0.5.2"

# Argument parser
clap = "2.33.3"

# For the CLI debugger
rustyline = {version = "1.0.0", optional = true}

# Logging implementation
fern = "0.6.0"
chrono = "0.4.19"
log = "0.4.13"

rodio = {version = "0.7.0", optional = true}

[dependencies.oxidgb_core]
path = "../core"
features = ["heap_alloc"]

[features]
debugger = ["oxidgb_core/debugger", "rustyline"]
enable_sound = ["oxidgb_core/enable_sound", "rodio"]
default = ["enable_sound", "oxidgb_core/logging"]
