[package]
name = "oxidgb_libretro"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-backend = {path = "libretro-backend"}

# Logging implementation
fern = "0.4.0"
chrono = "0.4.0"
log = "0.3.8"

serde = {version = "1.0.68", default-features = false, features = ["alloc"] }
serde_derive = "1.0.68"
bincode = "1.0.1"

[dependencies.oxidgb_core]
path = "../core"
