[package]
name = "oxidgb_libretro"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-backend = {path = "libretro-backend"}

# Logging implementation
fern = "0.6.0"
chrono = "0.4.19"
log = "0.4.13"

serde = {version = "1.0.122", default-features = false, features = ["alloc", "derive"] }
bincode = "1.0.1"

[dependencies.oxidgb_core]
path = "../core"
features = ["serialisation", "heap_alloc", "enable_sound", "own_game_data"]
